better contrast, fix arrows in change theme

--- a/src/sack/styles.css
+++ b/src/sack/styles.css
@@ -36,7 +36,7 @@ SackHeader {
 
 #form {
     width: 60;
-    border: solid $boost;
+    border: solid $surface-lighten-1;
     padding: 1;
 
     & * {
@@ -63,7 +63,7 @@ SackHeader {
         height: 4;
         width: 30;
         padding-left: 1;
-        border: solid $boost;
+        border: solid $surface-lighten-1;
 
         &:focus-within {
             border: solid $secondary 50%;
@@ -99,7 +99,7 @@ SackHeader {
         margin-top: 2;
         background: $background;
         text-style: none;
-        border: solid $boost;
+        border: solid $surface-lighten-1;
 
         &:focus {
             background: $background !important;
@@ -121,8 +121,7 @@ SackHeader {
 #chat-header {
     width: 100%;
     height: 2;
-    border-bottom: solid $boost;
-
+    border-bottom: solid $surface-lighten-1;
 }
 
 #messages {
@@ -146,7 +145,7 @@ SackHeader {
             height: auto;
             max-height: 50;
             padding: 1 2 1 2;
-            outline: solid $boost;
+            outline: solid $surface-lighten-1;
         }
 
         .msg-text {
@@ -173,7 +172,7 @@ SackHeader {
 }
 
 #input-wrapper {
-    border: solid $boost;
+    border: solid $surface-lighten-1;
 }
 
 TextInput {
@@ -190,7 +189,7 @@ TextInput {
 
 .modal {
     background: $background;
-    border: solid white 10%;
+    border: solid $surface-lighten-1;
     height: auto;
     width: 40;
     padding: 1;
@@ -223,16 +222,16 @@ TextInput {
 
 ThemeOption {
     .theme-arrow {
-        color: $background;
         margin-left: 2;
         margin-right: 1;
+        text-opacity: 0%;
     }
     &:focus-within {
         .theme-name {
             color: $secondary;
         }
         .theme-arrow {
-            color: $text;
+            text-opacity: 100%;
         }
     }
 
